--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ $(window).load(function() {
 													</span>
 													<div style="clear:both;"> </div>
 
-													<p>	My eyes are blue and my hair is black <br />(so far...)!
+													<p>	My eyes are brown and my hair is black <br />(so far...)!
 													</p>
 													<p>	Some measurements... I weighted 3.850 Kg (YES, that's almost 4 Kg!) and my length was 51 cm!
 													</p>
